fix(ptt): Major PTT audio and UI overhaul for production quality
Audio Fixes:
- Changed AudioSource from VOICE_COMMUNICATION to MIC to eliminate
  robotic/scary voice caused by Samsung DSP processing
- Implemented half-duplex mode: mute speaker during TX, skip RX packets
- Added 60s safety timeout to auto-stop stuck transmissions
- Added forceStopAllTransmission() emergency kill switch
- Fixed bitrate from 12kbps to 24kbps for better voice quality

Critical Bug Fixes:
- Fixed joinChannel/leaveChannel using shortId (4 bytes) instead of
  full channelId (16 bytes) causing silent failures
- Fixed PTTManager.ownPublicKey never being set from settings
- Fixed floor DENIED not stopping transmission
- Fixed joinedChannels Flow not reactive to state changes
- Fixed stopTransmit doing nothing when activeChannel is null

UI/UX Complete Rewrite:
- Redesigned to Zello/Motorola WAVE PTX style two-screen flow
- Channel list screen with clean rows (status dot, name, JOIN/menu)
- Full-screen Talk Screen with 160dp circular PTT button
- Pulsing red ring animation during transmission
- Proper back navigation between list and talk screens

Telecom Integration (Android 12+):
- Added CallStyle notifications for incoming/ongoing calls
- Added TelecomCallManager wrapping core-telecom
- Added SwipeToAnswerButton component
- Added FloatingCallControls glassmorphic island

Dependencies:
- Added androidx.core:core-telecom:1.0.0
- Added androidx.core:core-uwb:1.0.0-alpha11
- Added MANAGE_OWN_CALLS and UWB_RANGING permissions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
@@ -34,6 +35,14 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
+    <!-- Telecom (VoIP call integration) -->
+    <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+
+    <!-- UWB (Ultra-Wideband precise ranging) -->
+    <uses-permission android:name="android.permission.UWB_RANGING" />
+    <uses-feature android:name="android.hardware.uwb" android:required="false" />
 
     <!-- Boot & Wake -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -97,7 +106,7 @@
             android:name=".core.network.MeshService"
             android:enabled="true"
             android:exported="false"
-            android:foregroundServiceType="microphone|camera|mediaPlayback" />
+            android:foregroundServiceType="microphone|camera|mediaPlayback|phoneCall" />
 
         <!-- Boot Receiver -->
         <receiver
