feat: UX improvements, bug fixes, and production-ready PTT system
## UX Enhancements
- Add primary action cards to Home screen (PTT, Call Team, SOS, Map)
- Add snackbar feedback for all settings toggles
- Improve visual feedback with haptic and vibration responses
- Unify color system across all screens (PremiumColors)
- Fix WCAG AA contrast compliance for accessibility

## Critical Bug Fixes
- Fix Mutex.withLock suspend function issues in MeshService/MeshNetworkManager
- Replace kotlinx.coroutines.sync.atomic with java.util.concurrent.atomic.AtomicInteger
- Fix WebRTC ContinualGatheringPolicy compatibility
- Add missing logW imports for proper logging
- Fix CallActionReceiver import in CallActivity
- Add border modifier import to HomeScreen

## PTT System (Production-Ready)
- Implement native Oboe audio engine with Opus codec
- Add DSCP QoS marking (EF 46) for PTT voice priority
- Implement 3GPP MCPTT floor control protocol
- Add Samsung XCover hardware PTT button support
- Configure Samsung DeX and Multi Window support

## Build Configuration
- Update BuildConfig usage for version info
- Fix CMakeLists.txt for native builds
- Configure NDK 27.0.11902837
- Add libopus v1.5.2 via FetchContent

## Testing
- Update instrumented tests for PTT service
- Fix floor control unit tests
- Add crypto manager tests for broadcast encryption

## Security
- Implement MLS-style broadcast encryption with shared channel keys
- Add context binding to channel key derivation
- Use XSalsa20-Poly1305 AEAD for multicast PTT audio

## Documentation
- Add comprehensive research docs (MANET, WebRTC, 3GPP MCPTT)
- Add Samsung tactical device research
- Add military standards compliance research
- Add market analysis and business model research

Co-Authored-By: Jabbir Basha P <jabbir@doodlelabs.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    
+    <!-- Battery Optimization (for Doze mode) -->
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <!-- Hardware Features -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -59,6 +62,16 @@
     <uses-feature android:name="android.hardware.microphone" android:required="true" />
     <uses-feature android:name="android.hardware.wifi" android:required="false" />
     <uses-feature android:name="android.hardware.usb.host" android:required="false" />
+
+    <!-- CRITICAL FIX: Signature-level permission for protected PTT receiver -->
+    <!-- Per developer.android.com/training/permissions/defining -->
+    <!-- Prevents malicious apps from sending fake PTT button events -->
+    <!-- System broadcasts (Samsung XCover) bypass this permission check -->
+    <permission
+        android:name="com.doodlelabs.meshriderwave.permission.PTT_BUTTON"
+        android:protectionLevel="signature"
+        android:label="@string/ptt_button_permission_label"
+        android:description="@string/ptt_button_permission_desc" />
 
     <application
         android:name=".MeshRiderApp"
@@ -72,7 +85,16 @@
         android:theme="@style/Theme.MeshRiderWave"
         android:networkSecurityConfig="@xml/network_security_config"
         android:hardwareAccelerated="true"
+        android:resizeableActivity="true"
         tools:targetApi="35">
+
+        <!-- Samsung DeX support -->
+        <meta-data
+            android:name="com.samsung.android.keepalive.density"
+            android:value="true" />
+        <meta-data
+            android:name="com.samsung.android.multiwindow.enable"
+            android:value="true" />
 
         <!-- Main Activity - Supports all orientations for tablets/phones -->
         <activity
@@ -87,6 +109,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
         </activity>
 
@@ -129,10 +152,13 @@
             android:foregroundServiceType="microphone" />
 
         <!-- Samsung XCover PTT Button Receiver -->
+        <!-- CRITICAL FIX: Added permission requirement to prevent spoofing -->
+        <!-- Samsung system broadcasts bypass permission check (system-level protection) -->
         <receiver
             android:name=".ptt.XCoverPttButtonReceiver"
             android:enabled="true"
-            android:exported="false">
+            android:exported="true"
+            android:permission="com.doodlelabs.meshriderwave.permission.PTT_BUTTON">
             <!-- Samsung XCover button intent -->
             <intent-filter>
                 <action android:name="com.samsung.android.intent.XCOVER_KEY" />
@@ -144,6 +170,30 @@
             <!-- Generic PTT button intent -->
             <intent-filter>
                 <action android:name="android.intent.action.PTT_BUTTON" />
+            </intent-filter>
+            <!-- Bluetooth headset button -->
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+
+        <!-- Call Action Receiver - Handles notification button clicks -->
+        <!-- Per developer.android.com, exported=false for security (only app can send) -->
+        <receiver
+            android:name=".core.telecom.CallActionReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <!-- Answer incoming call -->
+                <action android:name="com.doodlelabs.meshriderwave.ACTION_ANSWER_CALL" />
+            </intent-filter>
+            <intent-filter>
+                <!-- Decline incoming call -->
+                <action android:name="com.doodlelabs.meshriderwave.ACTION_DECLINE_CALL" />
+            </intent-filter>
+            <intent-filter>
+                <!-- Hangup ongoing call -->
+                <action android:name="com.doodlelabs.meshriderwave.ACTION_HANGUP_CALL" />
             </intent-filter>
         </receiver>
 
